cabal-version:       >=1.10

name:                wable
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable wable
  main-is:             Main.hs
  other-modules:
    GUI,
    V2,
    Puzzle,
    BasicActions
  -- other-extensions:
  build-depends:
    base >=4.13 && <4.14,
    containers,
    text,
    websockets  >= 0.12,
    snap-server,
    aeson,
    websockets-snap
  hs-source-dirs:      src
  default-language:    Haskell2010
